@@ -4,7 +4,8 @@
   <object name="object" meta_type="CMF Action Category">
     <property name="title"></property>
 
-    <object name="locations" meta_type="CMF Action" i18n:domain="collective.geo.contentlocations">
+    <object name="locations" meta_type="CMF Action"
+        i18n:domain="collective.geo.contentlocations">
       <property name="title" i18n:translate="">Coordinates</property>
       <property name="description" i18n:translate=""></property>
       <property name="url_expr">string:${object_url}/@@manage-coordinates</property>
